[patch.crates-io]
abomonation = { git = "https://github.com/markbt/abomonation", rev = "0f43346d2afa2aedc64d61f3f4273e8d1e454642" }
audio_streams = { git = "https://github.com/google/crosvm", rev = "7d2e877a2a0a772c199fe8b6b51aec7c1b166467" }
base64urlsafedata = { git = "https://github.com/kanidm/webauthn-rs.git", rev = "d278c56adfa39a0723c79bdcd461644194bc5138" }
c2pa = { git = "https://github.com/dhruvmongia/c2pa-rs", rev = "32fd8548e6780f229eee173e378d540a9b579d16" }
cargo = { git = "https://github.com/rust-lang/cargo", rev = "f5b3a6ba899c2eb9285dd3769aa6d84179ee7f8b" }
cbindgen = { git = "https://github.com/mozilla/cbindgen.git", rev = "cf94b56ef35d91f8420e8f89fee70074d39d068d" }
cxx = { package = "cxx", git = "https://github.com/facebookexperimental/cxx.git", rev = "43f8f85eb1b9d99f10f7228ab679997c484ade69" }
cxx-build = { package = "cxx-build", git = "https://github.com/facebookexperimental/cxx.git", rev = "43f8f85eb1b9d99f10f7228ab679997c484ade69" }
displaydoc = { git = "https://github.com/yaahc/displaydoc", rev = "7dc6e324b1788a6b7fb9f3a1953c512923a3e9f0" }
imgui = { git = "https://github.com/imgui-rs/imgui-rs.git", rev = "2abba18c08fb5e70c699ba7992342e7ff8573b09" }
imgui-sys = { git = "https://github.com/imgui-rs/imgui-rs.git", rev = "2abba18c08fb5e70c699ba7992342e7ff8573b09" }
k = { git = "https://github.com/prnthp-meta/k", rev = "f06b504c563a4763dbf2d47366b868f67d5c9dd2" }
libbpf-sys = { git = "https://github.com/calebho/libbpf-sys.git", rev = "ac56b9d69f477711b8f02bab12319999e8ba410b" }
libcras = { git = "https://github.com/google/crosvm", rev = "7d2e877a2a0a772c199fe8b6b51aec7c1b166467" }
lru-disk-cache = { git = "https://github.com/mozilla/sccache", rev = "fdbf843d174c6796d736b2b61dab0297670390f8" }
minijail = { git = "https://chromium.googlesource.com/chromiumos/platform/minijail", rev = "fc020fd4672b3340ee706e192d043e12df8c8578" }
murmur3 = { git = "https://github.com/stusmall/murmur3", rev = "f363bf6dd1d668988bf798c320823f8ceaedf5aa" }
pcap = { git = "https://github.com/qrnch-jan/pcap", rev = "0c6ed076c84ef0c63198d384a24d66b737b24e4a" }
perf-event = { version = "0.4", git = "https://github.com/Nero5023/perf-event.git", rev = "6dae86b6d4807acec081e6dc0a53167f57f8c0f4" }
perf-event-open-sys = { version = "5.0", git = "https://github.com/Nero5023/perf-event.git", rev = "6dae86b6d4807acec081e6dc0a53167f57f8c0f4" }
plexi-core = { version = "0.1.2", git = "https://github.com/markbt/plexi", rev = "9d459b7fb26101e5c9c2489c220cbae03d1d7afe" }
protobuf-build = { git = "https://github.com/fbsource/protobuf-build", rev = "ee1de946ce2fd7d06a7a4fab7141e02c49f0981f" }
quickcheck = { git = "https://github.com/jakoschiko/quickcheck", rev = "6ecdf5bb4b0132ce66670b4d46453aa022ea892c" }
quickcheck_async = { git = "https://github.com/markbt/quickcheck_async", rev = "76b13525ca93e0725e757f841fc6ccab8bae1913" }
ratatui = { git = "https://github.com/fbsource/ratatui", rev = "2c4576ee123b2ac4845bd4a823af721ac447b33f" }
rinja = { git = "https://github.com/fbsource/askama", rev = "2fc6173c98034c148f46330fc39a006cf0b09efe" }
riscv = { git = "https://github.com/jsgf/riscv.git", rev = "90cfc5f2404e39e085e12845944d5bbbc869c290" }
riscv-pac = { git = "https://github.com/jsgf/riscv.git", rev = "90cfc5f2404e39e085e12845944d5bbbc869c290" }
riscv-rt = { git = "https://github.com/jsgf/riscv.git", rev = "90cfc5f2404e39e085e12845944d5bbbc869c290" }
sqlx = { git = "https://github.com/launchbadge/sqlx", rev = "24317d5eab40fbc33caf1142946e2f39caad73ea" }
stabby = { git = "https://github.com/fbsource/stabby", rev = "22db1dda19938ff7725a93db64012a5730325c5d" }
tokenizers-21 = { package = "tokenizers", git = "https://github.com/huggingface/tokenizers", rev = "133db48d4f272070076fbc7a649c9e8aa8cd0646" }
uefisettings = { git = "https://github.com/linuxboot/uefisettings", rev = "c0599ade83438ae4f050f6c2c169ee946e847f58" }
vm-allocator = { git = "https://github.com/rust-vmm/vm-allocator", rev = "5fb545cc6e41fdc9f27d48d97ed26274a35bc6c6" }
warp = { git = "https://github.com/jdthomas/warp.git", rev = "c794232d182abaa3add8184e7d661e084cc516c5" }
zenoh = { git = "https://github.com/nitinsingh-meta/zenoh", rev = "9b525dceb27582395da945c5af0c46a5d926f078" }
zenoh-ext = { git = "https://github.com/nitinsingh-meta/zenoh", rev = "9b525dceb27582395da945c5af0c46a5d926f078" }
zenoh-protocol = { git = "https://github.com/nitinsingh-meta/zenoh", rev = "9b525dceb27582395da945c5af0c46a5d926f078" }
zenoh-runtime = { git = "https://github.com/nitinsingh-meta/zenoh", rev = "9b525dceb27582395da945c5af0c46a5d926f078" }
zenoh-util = { git = "https://github.com/nitinsingh-meta/zenoh", rev = "9b525dceb27582395da945c5af0c46a5d926f078" }
zenohd = { git = "https://github.com/nitinsingh-meta/zenoh", rev = "9b525dceb27582395da945c5af0c46a5d926f078" }

[workspace]
members = [
  "benchmarks",
  "cli_rs/edenfs-client",
  "cli_rs/edenfs-commands",
  "cli_rs/edenfs-config",
  "cli_rs/edenfs-error",
  "cli_rs/edenfs-saved-state",
  "cli_rs/edenfs-utils",
  "cli_rs/edenfsctl",
  "cli_rs/sapling-client",
  "cli_rs/stack-config",
  "cli_rs/stack-config-derive",
  "config",
  "config/clients",
  "config/mocks",
  "config/services",
  "inodes/overlay",
  "inodes/overlay/clients",
  "inodes/overlay/mocks",
  "inodes/overlay/services",
  "rust/edenfs-asserted-states",
  "rust/edenfs-asserted-states-client",
  "rust/redirect_ffi",
  "service",
  "service/clients",
  "service/mocks",
  "service/services",
  "service/thrift_streaming",
  "service/thrift_streaming/clients",
  "service/thrift_streaming/mocks",
  "service/thrift_streaming/services",
]
resolver = "2"

[workspace.package]
license = "GPLv2+"
